GitHub Actions: Continue converting build matrix to GHA
The time limit per job on GHA is much larger than on Travis - 6 hours
currently - so we can remove the mentioning of it.

Source:
https://docs.github.com/en/actions/learn-github-actions/usage-limits-billing-and-administration#usage-limits

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -58,8 +58,8 @@ jobs:
           
           - java-version: 15
             # Still use Ant on one Java version to ensure it keeps working.
-            # Don't use it on the above job because deployment happens there which is slow, just like Ant
-            # - we would risk exhausting the time limit.
+            # Don't use it on the above job because deployment happens there which is slow, just
+            # like Ant.
             WoT-builder: ant
             # Kept at default:
             fred-branch: next
