GitHub Actions: Documentation: Improve suggested workaround for fred bug
Based on Freetalk commit 7575a3efd245c05133d38d102369b7b05205e232

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -110,6 +110,10 @@ jobs:
           #   $ gradle clean jar
           # This is due to a bug in fred's Gradle script which could be fixed
           # like this WoT commit did: 06c007204f40c712a398f0b58671f77fd9aeffd1
+          # EDIT: A better long-term fix for such issues would be to use a file "Version.properties"
+          # instead of patching the "Version.java" source code, like Freetalk now does.
+          # See Freetalk commits 195cfd70aad92c592e0a591d9804712b1cb43a1e and
+          # 0d956c4bf0afbca7a8cb9ef855d0ea415f09bb9a
           ./gradlew clean &&
           # "copyRuntimeLibs" copies the JAR *and* dependencies - which WoT also
           # needs - to build/output/
