--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -97,7 +97,9 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: plugin-WebOfTrust # Available via: "$GITHUB_WORKSPACE/plugin-WebOfTrust"
-        submodules: true # FIXME: The Gradle script should do it automatically like the Ant one did.
+        # FIXME: The Gradle script should init submodules automatically like the Ant one did.
+        # Remove the command for that from the README.md once you implement it.
+        submodules: true
     
     - name: Compile Freenet Git repository
       run: |
