--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,8 +1,3 @@
-# FIXME: This currently is the old Travis CI script, NOT a GitHub Actions script!
-# It has been moved to the GitHub Actions path to preserve git history when converting it to a GHA
-# script. So convert it to the GHA syntax and then remove this FIXME.
-# See: https://docs.github.com/en/actions/guides/building-and-testing-java-with-gradle
-
 # FIXME: Replace the Travis CI badges in the README.md with GitHub Actions badges.
 
 name: CI
@@ -179,6 +174,7 @@ jobs:
       run: ./.travis.upload-jar-to-freenet.sh
 
 # FIXME: Convert the below caching code from its Travis CI syntax to the GitHub Actions syntax.
+# See https://docs.github.com/en/actions/guides/building-and-testing-java-with-gradle#caching-dependencies
 #
 ## before_cache:
 ##   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
