GitHub Actions: Documentation
Based on Freetalk commit 866de367b9f9a686f4c235ed145dbe35b8fd5080

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -158,6 +158,7 @@ jobs:
             WOT__SHOW_GRADLE_TEST_OUTPUT=1 ./gradlew clean test jar
         else false ; fi
         # To test the Ant and Gradle builders against each other uncomment the following.
+        # FIXME: Do this because this script has been converted from Travis CI to GitHub Actions.
         ## - tools/compare-gradle-jars-with-ant-jars
         ## - tools/compare-gradle-tests-with-ant-tests
     
