--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,6 +11,7 @@ env:
 jobs:
   build:
     # FIXME: Use ubuntu-latest once we've finished converting from Travis to GHA syntax
+    # FIXME: Also test on Debian stable using strategy.matrix as that's what fred targets.
     # FIXME: Also test on Windows and MacOS using strategy.matrix
     runs-on: ubuntu-18.04
     strategy:
