GitHub Actions: Remove wrong claim of GitHub Actions having a time quota
There's only a CPU time quota for private repositories.
Open source repositories are unlimited.
Source: https://github.com/features/actions

Based on Freetalk commit bc40c4ea0872b719c96a3f430b507ded18dd9d22

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,7 +24,7 @@ jobs:
         # Also apply this to the "include:" section.
         # 
         # 9, 10 excluded because: Building fred fails there, probably because they're EOL.
-        # FIXME: Trim the set of Java versions to avoid exhausting our CPU time quota too quickly.
+        # TODO: Trim the set of Java versions to respect GitHub's free service.
         # FIXME: Add 16, 17, 18.
         java-version: [8, 11, 12, 13, 14, 15]
         fred-branch:  [next]
