--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -149,8 +149,9 @@ jobs:
             ant clean && ant
         elif [ "${{matrix.WoT-builder}}" = "gradle" ] ; then
             rm -f ./gradlew
-            # Latest Gradle version as of 2021-06-14.
-            gradle wrapper --gradle-version 7.1
+            # Latest Gradle version as of 2021-07-02.
+            # NOTICE: Gradle might ignore the specified version and download a newer one instead.
+            gradle wrapper --gradle-version 7.1.1
             ./gradlew --version
             # Show stdout/stderr so random seeds of failed tests can be obtained by developers to
             # reproduce failed test runs. Also prevents the 10 minute build timeout.
