--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -149,11 +149,9 @@ jobs:
             ant clean && ant
         elif [ "${{matrix.WoT-builder}}" = "gradle" ] ; then
             rm -f ./gradlew
-            # Latest Gradle version as of 2021-07-02.
-            gradle wrapper --gradle-version 7.1.1
-            # Workaround for the above command ignoring the specified version and downloading a
-            # newer one instead (which fails to work with our current Gradle script).
-            ./gradlew wrapper --gradle-version 7.1.1
+            # Latest Gradle version known to definitely work with WoT.
+            # FIXME: Upgrade it and fix the Gradle script to work with the most recent one.
+            gradle wrapper --gradle-version 4.10.3
             ./gradlew --version
             # Show stdout/stderr so random seeds of failed tests can be obtained by developers to
             # reproduce failed test runs. Also prevents the 10 minute build timeout.
