GitHub Actions: Amend the previous commit AGAIN
It *STILL* downloads 7.3.3.

Digging further in the manual at
https://docs.gradle.org/7.3.3/userguide/gradle_wrapper.html#sec:upgrading_wrapper
yielded this:
> Note that running the wrapper task once will update
> gradle-wrapper.properties only, but leave the wrapper itself in
> gradle-wrapper.jar untouched. This is usually fine as new versions of
> gradle can be run even with ancient wrapper files. If you nevertheless
> want all the wrapper files to be completely up-to-date, you’ll need to
> run the wrapper task a second time.

So let's try running it twice.
Notice that we did already try that, but the last time was using
./gradlew for the second run, try it with "gradle" only now.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -155,6 +155,9 @@ jobs:
             # Latest Gradle version known to definitely work with WoT.
             # FIXME: Upgrade it and fix the Gradle script to work with the most recent one.
             gradle wrapper --gradle-version 4.10.3
+            # Workaround for the above command ignoring the specified version and downloading a new
+            # one instead.
+            gradle wrapper --gradle-version 4.10.3
             ./gradlew --version
             # Show stdout/stderr so random seeds of failed tests can be obtained by developers to
             # reproduce failed test runs. Also prevents the 10 minute build timeout.
