--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -154,10 +154,15 @@ jobs:
             rm -rf ./gradlew ./gradlew.bat ./gradle/
             # Latest Gradle version known to definitely work with WoT.
             # FIXME: Upgrade it and fix the Gradle script to work with the most recent one.
-            gradle wrapper --gradle-version 4.10.3
+            # "--continue" is a workaround for Gradle 7.3.3: It tells Gradle to ignore build
+            # failures, because the "gradle wrapper" command would otherwise try to parse the build
+            # script and fail if the build script is incompatible with the system's Gradle version,
+            # which would result in the wrapper NOT being downloaded.
+            # In other words: "gradle wrapper" doesn't ignore the build script like it should IMHO.
+            gradle wrapper --gradle-version 4.10.3 --continue
             # Workaround for the above command ignoring the specified version and downloading a new
             # one instead.
-            gradle wrapper --gradle-version 4.10.3
+            gradle wrapper --gradle-version 4.10.3 --continue
             ./gradlew --version
             # Show stdout/stderr so random seeds of failed tests can be obtained by developers to
             # reproduce failed test runs. Also prevents the 10 minute build timeout.
