--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -152,20 +152,15 @@ jobs:
             set -x
             
             rm -rf ./gradlew ./gradlew.bat ./gradle/
+            # Workaround for "$ gradle wrapper ..."  failing to download the wrapper if the Gradle
+            # version is incompatible with our build file and thus fails to parse.
+            # TODO: Remove, along with the mv which undos it, once the Gradle issue is fixed:
+            # https://github.com/gradle/gradle/issues/19809
+            mv --force build.gradle build.gradle.github-actions-temp
             # Latest Gradle version known to definitely work with WoT.
             # FIXME: Upgrade it and fix the Gradle script to work with the most recent one.
-            # "--continue" is a workaround for Gradle 7.3.3: It tells Gradle to ignore build
-            # failures, because the "gradle wrapper" command would otherwise try to parse the build
-            # script and fail if the build script is incompatible with the system's Gradle version,
-            # which would result in the wrapper NOT being downloaded.
-            # In other words: "gradle wrapper" doesn't ignore the build script like it should IMHO.
-            # EDIT: The above workaround does not work, the build failure still causes cancellation.
-            # Trying with "--no-daemon" hence as the logs show that it tries to start a daemon,
-            # which might be what parses the build script.
-            gradle wrapper --gradle-version 4.10.3 --continue --no-daemon
-            # Workaround for the above command ignoring the specified version and downloading a new
-            # one instead.
-            gradle wrapper --gradle-version 4.10.3 --continue --no-daemon
+            gradle wrapper --gradle-version 4.10.3
+            mv build.gradle.github-actions-temp build.gradle
             ./gradlew --version
             # Show stdout/stderr so random seeds of failed tests can be obtained by developers to
             # reproduce failed test runs. Also prevents the 10 minute build timeout.
