GitHub Actions: Downgrade FIXME to TODO, can't be resolved yet
Based on Freetalk commit a484f8f686a7ff9ca4a26e70afe39160ce2a87ca

Source:
https://docs.github.com/en/actions/using-github-hosted-runners/about-github-hosted-runners#supported-runners-and-hardware-resources

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,7 +10,8 @@ env:
 
 jobs:
   build:
-    # FIXME: Also test on Debian stable using strategy.matrix as that's what fred targets.
+    # TODO: Also test on Debian stable using strategy.matrix as that's what fred targets.
+    # Unfortunately as of 2022-02-27 Debian is not available on GitHub Actions (yet?).
     # FIXME: Also test on Windows and MacOS using strategy.matrix
     runs-on: ubuntu-latest
     strategy:
