GitHub Actions: Try testing on Windows
Based on Freetalk commit 443589653c6dce36999a2177527526f265881ece

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,7 +16,7 @@ jobs:
         # TODO: Also test on Debian stable using strategy.matrix as that's what fred targets.
         # Unfortunately as of 2022-02-27 Debian is not available on GitHub Actions (yet?).
         # FIXME: Also test on Windows and MacOS using strategy.matrix
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest]
         # 8 is $FRED_MINIMUM_JAVA_VERSION currently.
         # TODO: Code quality: As of 2022-01-03 using ["${{env.FRED_MINIMUM_JAVA_VERSION}}", ...]
         # instead of [8, ...] does not work, see: https://github.com/actions/runner/issues/480
