GitHub Actions: Fix for lack of "sudo" command on Windows
See:
https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstepsif
https://docs.github.com/en/actions/reference/context-and-expression-syntax-for-github-actions#contains

Based on Freetalk commit b878674a4d43f6be0bac387c056bec67587112f8

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -74,6 +74,11 @@ jobs:
     
     steps:
     - name: Install apt packages
+      # FIXME: "sudo" command does not exist on Windows so I've just disabled the whole package
+      # installation there with the !contains().
+      # However the lack of sudo does not necessarily mean that there is no apt-get on Windows.
+      # Try if there is one.
+      if: ${{ !contains(matrix.os, 'windows') }}
       # python3-pip is for .travis.upload-jar-to-freenet.sh
       run: sudo apt-get --assume-yes install ant ant-optional junit4 libhamcrest-java python3-pip
     
