GitHub Actions: Amend the previous commit
Based on Freetalk commit 2cdefd354a397b1c10d073413146b47d93558f30

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -75,7 +75,7 @@ jobs:
     steps:
     - name: Install apt packages
       # FIXME: "sudo" command does not exist on Windows so I've just disabled the whole package
-      # installation there with the !contains().
+      # installation there with the !contains() to see if they're perhaps installed by default.
       # However the lack of sudo does not necessarily mean that there is no apt-get on Windows.
       # Try if there is one.
       if: ${{ !contains(matrix.os, 'windows') }}
