--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -78,7 +78,7 @@ jobs:
       # installation there with the !contains() to see if they're perhaps installed by default.
       # However the lack of sudo does not necessarily mean that there is no apt-get on Windows.
       # Try if there is one.
-      if: ${{ !contains(matrix.os, 'windows') }}
+      if: runner.os == 'Linux'
       # python3-pip is for .travis.upload-jar-to-freenet.sh
       run: sudo apt-get --assume-yes install ant ant-optional junit4 libhamcrest-java python3-pip
     
