GitHub Actions: Show OS name in job name
Based on Freetalk commit 241419e348215f8712f16c4329f24afd109004c9

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -67,6 +67,7 @@ jobs:
     
     runs-on: ${{ matrix.os }}
     name: >-
+        ${{matrix.os}}
         JDK${{matrix.java-version}}
         fred: ${{matrix.fred-branch}}
         builder: ${{matrix.WoT-builder}}
