--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -82,8 +82,8 @@ jobs:
       # EDIT: The default shell is NOT bash on Windows but PowerShell Core! So perhaps the regular
       # Linux commands are not in the environment there. Try if "shell: bash" makes sudo available.
       # Source: https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#using-a-specific-shell
-
-      if: runner.os == 'Linux'
+      shell: bash
+      ## if: runner.os == 'Linux'
       # python3-pip is for .travis.upload-jar-to-freenet.sh
       run: sudo apt-get --assume-yes install ant ant-optional junit4 libhamcrest-java python3-pip
     
