GitHub Actions: Add temporary workaround for lack of "apt-get" command on MacOS
Source:
https://docs.github.com/en/actions/reference/context-and-expression-syntax-for-github-actions#runner-context

Based on Freetalk commits
0cb43aa4643ebc9ea767047a72e4c818e9405940
a95b8e16daf98da3acf5237f432bfed32aa30f12

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -80,6 +80,8 @@ jobs:
         if [ '${{runner.os}}' = 'Windows' ] ; then
           echo 'FIXME: Cannot build on Windows yet: Find a way to install JUnit + Hamcrest!'
           exit 1
+        elif [ '${{runner.os}}' = 'macOS' ] ; then
+          echo 'FIXME: Find a way to install JUnit + Hamcrest if not installed by default!'
         else
           # python3-pip is for .travis.upload-jar-to-freenet.sh
           sudo apt-get --assume-yes install ant ant-optional junit4 libhamcrest-java python3-pip
