GitHub Actions: MacOS: Fix failure due to lack of "sha256sum" command
Source:
https://unix.stackexchange.com/questions/426837/no-sha256sum-in-macos

Based on Freetalk commit e7fc26e220939feb6d7ddd8562fbee103e02bc90

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -81,6 +81,7 @@ jobs:
           echo 'FIXME: Cannot build on Windows yet: Find a way to install JUnit + Hamcrest!' >&2
           exit 1
         elif [ '${{runner.os}}' = 'macOS' ] ; then
+          brew install coreutils # For step "Compile and test WoT"
           echo 'FIXME: Find a way to install JUnit + Hamcrest if not installed by default!' >&2
         else
           # python3-pip is for .travis.upload-jar-to-freenet.sh
