GitHub Actions: Rename step "Install apt packages" to "Install dependencies" because we don't use apt for all of them
Based on Freetalk commit e5d0a98070c679ea7c0df83d01b385a3705d6bea

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -74,7 +74,7 @@ jobs:
         deploy: ${{matrix.upload-jar-to-freenet}}
     
     steps:
-    - name: Install apt packages
+    - name: Install dependencies
       shell: bash
       run: |
         if [ '${{runner.os}}' = 'Windows' ] ; then
