GitHub Actions: MacOS: Try to fix "mv: illegal option -- -"
Source: https://ss64.com/osx/mv.html

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -168,7 +168,7 @@ jobs:
             # file is incompatible with the system's Gradle version and thus fails to parse.
             # TODO: Code quality: Remove, along with the mv which undos it, once the Gradle issue is
             # fixed: https://github.com/gradle/gradle/issues/19809
-            mv --force build.gradle build.gradle.github-actions-temp
+            mv -f build.gradle build.gradle.github-actions-temp
             echo "apply plugin: 'java'" > build.gradle
             # Latest Gradle version known to definitely work with WoT.
             # FIXME: Upgrade it and fix the Gradle script to work with the most recent one.
@@ -181,7 +181,7 @@ jobs:
             #   5aa85ed4532c20284fbb0bf4f532b3299f29716e
             #   75093ebf5fbdb252a34a118d7857e442f96562a8
             gradle wrapper --gradle-version 4.10.3
-            mv --force build.gradle.github-actions-temp build.gradle
+            mv -f build.gradle.github-actions-temp build.gradle
             ./gradlew --version
             # Show stdout/stderr so random seeds of failed tests can be obtained by developers to
             # reproduce failed test runs. Also prevents the 10 minute build timeout.
