Gradle: Add Maven Central for dependency download if environment variable is set
This will be used for GitHub Actions:
On Windows and MacOS we cannot obtain JUnit etc. from /usr/share so we
need to download the dependencies there.

Not using jcenter() like fred does because jcenter was abandoned and
hence isn't updated anymore:
https://jfrog.com/blog/into-the-sunset-bintray-jcenter-gocenter-and-chartcenter/

mavenCentral() seems to be the default suggestion according to the
Gradle documentation:
https://docs.gradle.org/current/userguide/declaring_repositories.html

Based on Freetalk commit 5ec3326e244e8bbeea89500e7b157b45aaf5d8e2

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,14 @@ sourceCompatibility = targetCompatibility = 7
 tasks.withType(JavaCompile) { options.encoding = "UTF-8" }
 javadoc.enabled = false
 
+repositories {
+	if(System.getenv('WOT__DOWNLOAD_DEPENDENCIES') == '1') {
+		println 'WARNING: Download of dependencies is enabled! This script does not use '
+		      + 'gradle-witness yet, therefore supply chain attacks are possible!'
+		mavenCentral()
+	}
+}
+
 configurations { junit } // Needed when we manually specify the tests' classpath
 dependencies {
 	// Run fred's Gradle with "./gradlew jar copyRuntimeLibs" to produce this directory
