Gradle: Logging: Don't imply we're going to support gradle-witness
I do not plan to spend time on it:
Using the binaries from /usr/share is the default for WoT.
And that is a good choice because those come from the Linux
distribution, so the distribution can deal with figuring out how to
avoid supply chain attacks - which totally makes sense, because
"distribution" means precisely what this is about, *distribution* of
binaries in a safe fashion.

Based on Freetalk commit c27a4ddb39f18351cf2c45a1493d4af8f733a0fe

--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,7 @@ javadoc.enabled = false
 
 repositories {
 	if(System.getenv('WOT__DOWNLOAD_DEPENDENCIES') == '1') {
-		println 'WARNING: Download of dependencies is enabled! This script does not use '
-		      + 'gradle-witness yet, therefore supply chain attacks are possible!'
+		println 'WARNING: Download of dependencies is enabled! Watch out for supply chain attacks!'
 		mavenCentral()
 	}
 }
