--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,10 @@ dependencies {
 	// Use Gradle's dependency management + gradle-witness once this has been resolved.
 	compile fileTree(dir: '../fred/build/output/', include: '*.jar')
 	compile files('db4o-7.4/db4o.jar')
-	junit files('/usr/share/java/junit4.jar', '/usr/share/java/hamcrest-core.jar')
+	if(System.getenv('WOT__DOWNLOAD_DEPENDENCIES') == '1')
+		junit('junit:junit:4.11') // Hamcrest is automatically included as transitive dependency.
+	else
+		junit files('/usr/share/java/junit4.jar', '/usr/share/java/hamcrest-core.jar')
 	testCompile configurations.junit
 }
 
