GitHub Actions: Try testing on Windows now that our Gradle script supports dependency download
Based on Freetalk commit 7365bd06f2af1ad33afb081be437387c47fcc4fa

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,7 +16,7 @@ jobs:
         # TODO: Also test on Debian stable as that's what fred targets.
         # Unfortunately as of 2022-02-27 Debian is not available on GitHub Actions (yet?).
         # FIXME: Also test on Windows and MacOS.
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest]
         # 8 is $FRED_MINIMUM_JAVA_VERSION currently.
         # TODO: Code quality: As of 2022-01-03 using ["${{env.FRED_MINIMUM_JAVA_VERSION}}", ...]
         # instead of [8, ...] does not work, see: https://github.com/actions/runner/issues/480
@@ -77,10 +77,7 @@ jobs:
     - name: Install dependencies
       shell: bash
       run: |
-        if [ '${{runner.os}}' = 'Windows' ] ; then
-          echo 'FIXME: Cannot build on Windows yet: Find a way to install JUnit + Hamcrest!' >&2
-          exit 1
-        elif [ '${{runner.os}}' = 'macOS' ] ; then
+        if [ '${{runner.os}}' = 'macOS' ] ; then
           brew install coreutils # For step "Compile and test WoT"
           echo 'FIXME: Cannot build on MacOS yet: Find a way to install JUnit + Hamcrest!' >&2
           exit 1
@@ -184,6 +181,10 @@ jobs:
             #   1caddf40a743477499df6013b3ec61ab89453d39
             gradle wrapper --gradle-version 4.10.3
             mv -f build.gradle.github-actions-temp build.gradle
+            if [ "${{runner.os}}" = 'Windows' ] ; then
+              # On Windows we can't get the dependencies from /usr/share so download them instead.
+              export WOT__DOWNLOAD_DEPENDENCIES=1
+            fi
             ./gradlew --version
             # Show stdout/stderr so random seeds of failed tests can be obtained by developers to
             # reproduce failed test runs. Also prevents the 10 minute build timeout.
