GitHub Actions: Exclude Java 16 on Windows, fred doesn't compile with it
fred's Gradle fails with:
> Unable to get mutable Windows environment variable map

Documentation of the "exclude:" feature:
https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#example-excluding-configurations-from-a-matrix

Based on Freetalk commit f6bb8b9e1d7e46b0ca46ffef82dd041c1897c2f3

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -64,7 +64,12 @@ jobs:
             os: ubuntu-latest
             fred-branch: next
             upload-jar-to-freenet: false
-    
+        
+        exclude:
+          - os: windows-latest
+            # TODO: Bug: As of 2021-09-11 fred doesn't compile with Java 16 on Windows due to its
+            # Gradle version 4.10.3 not working there. Try again once fred uses a more recent one.
+            java-version: 16
     runs-on: ${{ matrix.os }}
     name: >-
         ${{matrix.os}}
