--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -160,6 +160,8 @@ jobs:
         
         # TODO: Put dependency checksums and fred version info into separate "- name" steps so they
         # can be viewed more easily on the web interface.
+        # TODO: Also print the checksums of other dependency JARs which Gradle has obtained from the
+        # Internet or /usr/share.
         echo 'Checksums of dependencies:' ; sha256sum ../fred/build/output/*
         echo 'fred version:'
         java -classpath '../fred/build/output/freenet.jar' 'freenet.node.Version'
