--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -161,7 +161,7 @@ jobs:
         # TODO: Put dependency checksums and fred version info into separate "- name" steps so they
         # can be viewed more easily on the web interface.
         # TODO: Also print the checksums of other dependency JARs which Gradle has obtained from the
-        # Internet or /usr/share.
+        # Internet or the local system.
         echo 'Checksums of dependencies:' ; sha256sum ../fred/build/output/*
         echo 'fred version:'
         java -classpath '../fred/build/output/freenet.jar' 'freenet.node.Version'
