--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -158,11 +158,11 @@ jobs:
         set -o errexit
         cd "$GITHUB_WORKSPACE/plugin-WebOfTrust"
         
-        # TODO: Put dependency checksums and fred version info into separate "- name" steps so they
+        # TODO: Put fred checksums and fred version info into separate "- name" steps so they
         # can be viewed more easily on the web interface.
         # TODO: Also print the checksums of other dependency JARs which Gradle has obtained from the
         # Internet or the local system.
-        echo 'Checksums of dependencies:' ; sha256sum ../fred/build/output/*
+        echo 'Checksums of fred JARs:' ; sha256sum ../fred/build/output/*
         echo 'fred version:'
         java -classpath '../fred/build/output/freenet.jar' 'freenet.node.Version'
         if [ "${{matrix.WoT-builder}}" = "ant" ] ; then
